# NotesApi

./: .env  README.md  app.py  pyproject.toml
api/: __init__.py
api/auth/: actions.py  helper.py  schemas.py  utils.py  views.py
api/notes/: actions.py  schemas.py  views.py
core/: __init__.py  config.py  db_core.py
core/models/: __init__.py  base.py  note.py  user.py
migrations/: env.py
migrations/versions/: 47cabd4212ac_delete_created_at_field_from_notes_table.py  79e1f3419b73_create_notes_table.py  7b4aed9402a8_create_user_table.py  aae1be3e4156_correct_user_table.py
