[tool.poetry]
name = "notesapi"
version = "0.1.0"
description = ""
authors = ["Ilya <ilya925512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.112.0"}
alembic = "^1.13.2"
asyncpg = "^0.29.0"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
